Closed Bug 779638 Opened 14 years ago Closed 14 years ago

Don't clear the request's transaction in IDBChild::Recv[Success|Error] since it may be too early

Categories

(Core :: Storage: IndexedDB, defect)

defect
Not set
normal

Tracking

()

RESOLVED FIXED
mozilla17
Tracking Status
firefox16 --- fixed

People

(Reporter: khuey, Assigned: khuey)

References

Details

Attachments

(1 file)

Attached patch PatchSplinter Review
Got r=bent irl.
Attachment #648078 - Flags: review+
Status: ASSIGNED → RESOLVED
Closed: 14 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla17
Comment on attachment 648078 [details] [diff] [review] Patch [Approval Request Comment] Bug caused by (feature/regressing bug #): Implementing IndexedDB for e10s User impact if declined: Annoyance to the sheriffs. Testing completed (on m-c, etc.): Spent a week on m-c, kills orange dead. Risk to taking this patch (and alternatives if risky): Very low risk. String or UUID changes made by this patch: None. Lets take this on Aurora to avoid oranges. This code isn't actually used (it's for B2G) in any shipping product, but it is tested.
Attachment #648078 - Flags: approval-mozilla-aurora?
Comment on attachment 648078 [details] [diff] [review] Patch much love for things that kill orange dead. land away!
Attachment #648078 - Flags: approval-mozilla-aurora? → approval-mozilla-aurora+
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: