Bug 779638: Delay dropping the transaction until later to avoid races. r=bent